--- a/index.html
+++ b/index.html
@@ -315,15 +315,19 @@
 													<li class="menu-item"><a href="https://kalyanishrestha.com.np/contact.html">Suggestion</a></li>
 												</ul>
 											</li>
-											<li class="menu-item">
+											<!-- <li class="menu-item">
 												<a href="#">
 													<img src="./images/language.png" height="32" width="32" alt="lang" />
 													<div id="google_translate_element"></div>
 												</a>
-											</li>
+											</li> -->
 										</ul>
 									</div>
 								</div>
+								<a href="#">
+									<img src="./images/language.png" height="32" width="32" alt="lang" />
+									<div id="google_translate_element"></div>
+								</a>
 								<div class="navbar-right menu-right">
 									<ul class="d-flex align-items-center list-inline m-0">
 										<li class="nav-item nav-icon">
