--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
 					<div class="candle">
 						<div class="blinking-glow"></div>
 						<div class="thread"></div>
-						<img style="bottom: -50px;" src="./images/logo.webp" alt="logo" />
+						<img loading="lazy" style="bottom: -50px;" src="./images/logo.webp" alt="logo" />
 						<div class="glow"></div>
 						<div class="flame"></div>
 					</div>
@@ -192,7 +192,7 @@
 									</div>
 								</a>
 								<a class="navbar-brand" href="https://kalyanishrestha.com.np">
-									<img class="img-fluid logo" src="./images/logo.webp" loading="lazy" alt="Human Anatomy" />
+									<img loading="lazy" class="img-fluid logo" src="./images/logo.webp" loading="lazy" alt="Human Anatomy" />
 								</a>
 								<div class="mobile-more-menu">
 									<a href="#" class="more-toggle" id="dropdownMenuButton" data-toggle="more-toggle" aria-haspopup="true" aria-expanded="false">
@@ -230,7 +230,7 @@
 															<div class="iq-card-body">
 																<a href="https://linktr.ee/anotomy" target="_blank" class="iq-sub-card">
 																	<div class="media align-items-center">
-																		<img src="./images/notify/linktr.webp" class="img-fluids mr-3" loading="lazy" alt="Human Anatomy" />
+																		<img loading="lazy" src="./images/notify/linktr.webp" class="img-fluids mr-3" loading="lazy" alt="Human Anatomy" />
 																		<div class="media-body">
 																			<h6 class="mb-0">Chase me</h6>
 																			<small class="font-size-12"> now</small>
@@ -243,7 +243,7 @@
 												</li>
 												<li>
 													<a href="./index.html">
-														<img src="./images/user/user.webp" class="img-fluid avatar-40 rounded-circle" loading="lazy" alt="user" />
+														<img loading="lazy" src="./images/user/user.webp" class="img-fluid avatar-40 rounded-circle" loading="lazy" alt="user" />
 													</a>
 												</li>
 											</ul>
@@ -253,9 +253,7 @@
 								<div class="collapse navbar-collapse" id="navbarSupportedContent">
 									<div class="menu-main-menu-container">
 										<ul id="top-menu" class="navbar-nav ml-auto">
-											<li class="menu-item">
-												<a href="https://kalyanishrestha.com.np"><i class="fas fa-home"></i></a>
-											</li>
+
 											<li class="menu-item">
 												<a href="#">FAQs</a>
 												<ul class="sub-menu">
@@ -317,7 +315,7 @@
 											</li>
 											<!-- <li class="menu-item">
 												<a href="#">
-													<img src="./images/language.png" height="32" width="32" alt="lang" />
+													<img loading="lazy" src="./images/language.png" height="32" width="32" alt="lang" />
 													<div id="google_translate_element"></div>
 												</a>
 											</li> -->
@@ -325,7 +323,7 @@
 									</div>
 								</div>
 								<a href="#">
-									<img src="./images/language.png" height="32" width="32" alt="lang" />
+									<img loading="lazy" src="./images/language.png" height="32" width="32" alt="lang" />
 									<div id="google_translate_element"></div>
 								</a>
 								<div class="navbar-right menu-right">
@@ -358,7 +356,7 @@
 													<div class="iq-card-body">
 														<a href="https://linktr.ee/anotomy" target="_blank" class="iq-sub-card">
 															<div class="media align-items-center">
-																<img src="./images/notify/linktr.webp" class="img-fluids mr-3" loading="lazy" alt="Human Anatomy" />
+																<img loading="lazy" src="./images/notify/linktr.webp" class="img-fluids mr-3" loading="lazy" alt="Human Anatomy" />
 																<div class="media-body">
 																	<h6 class="mb-0">Chase me</h6>
 																	<small class="font-size-12"> now</small>
@@ -371,7 +369,7 @@
 										</li>
 										<li class="nav-item nav-icon">
 											<a href="https://kalyanishrestha.com.np">
-												<img src="./images/user/user.webp" class="img-fluid avatar-40 rounded-circle" alt="user" loading="lazy" />
+												<img loading="lazy" src="./images/user/user.webp" class="img-fluid avatar-40 rounded-circle" alt="user" loading="lazy" />
 											</a>
 										</li>
 									</ul>
@@ -383,6 +381,23 @@
 			</div>
 		</header>
 		<!-- Header End -->
+		<script>
+			// Get the value of the 'hideFooter' query parameter from the URL
+			const urlParamsh = new URLSearchParams(window.location.search);
+			const hideFooterh = urlParamsh.get('hideFooterh');
+	
+			// If the 'hideFooterh' parameter is present and set to 'true', set a cookie to remember that the footer should be hidden
+			if (hideFooterh === 'true') {
+				document.cookie = 'hideFooter=true';
+			}
+	
+			// Check if the 'hideFooter' cookie is set, and if it is, hide the footer element
+			const hideFooterCookieH = document.cookie.split(';').find(cookie => cookie.trim().startsWith('hideFooter='));
+			if (hideFooterCookieH && hideFooterCookieH.split('=')[1] === 'true') {
+				// document.querySelector('.footer-one').style.display = 'none';
+				document.querySelector('#loading').style.display = 'none';
+			}
+		</script>
 
 
 		<main style="padding-top: 80px;">
@@ -442,7 +457,7 @@
 									const videoLink = document.createElement('div');
 									videoLink.classList.add('playerVdo');
 
-									videoLink.innerHTML = `<video controls controlsList="nodownload">
+									videoLink.innerHTML = `<video preload="none" controls controlsList="nodownload">
      														 <source src="${item.VideoURL}" type="video/mp4">
       														</video>`
 
@@ -576,13 +591,13 @@
 						<div class="col-lg-3 col-md-6 mt-4 mt-lg-0">
 							<div class="widget text-left">
 								<div class="textwidget">
-									<a href="./index.html" class="footer-link-title"><img class="img-fluid logo" style="margin-bottom: 1em;" src="./images/footer/loadfooter.webp" loading="lazy" alt="Human Anatomy" /></a>
+									<a href="./index.html" class="footer-link-title"><img loading="lazy" class="img-fluid logo" style="margin-bottom: 1em;" src="./images/footer/loadfooter.webp" loading="lazy" alt="Human Anatomy" /></a>
 									<div class="d-flex align-items-center">
 										<a class="app-image" href="https://kalyanishrestha.com.np/HumanAnatomy.apk">
-											<img src="./images/footer/01.webp" loading="lazy" alt="play-store" />
+											<img loading="lazy" src="./images/footer/01.webp" loading="lazy" alt="play-store" />
 										</a>
 										<br />
-										<a class="ml-3 app-image" href="https://kalyanishrestha.com.np/comingsoon.html"><img src="./images/footer/02.webp" loading="lazy" alt="app-store" /></a>
+										<a class="ml-3 app-image" href="https://kalyanishrestha.com.np/comingsoon.html"><img loading="lazy" src="./images/footer/02.webp" loading="lazy" alt="app-store" /></a>
 									</div>
 								</div>
 							</div>
