--- a/index.html
+++ b/index.html
@@ -273,23 +273,12 @@
 												</ul>
 											</li>
 											<li class="menu-item">
-												<a href="https://kalyanishrestha.com.np/category.html">Category</a>
+												<a href="https://kalyanishrestha.com.np/category.html">Products</a>
 											</li>
 											<li class="menu-item active">
 												<a href="https://kalyanishrestha.com.np/dict/dictionary.html">Dictionary</a>
 											</li>
-											<li class="menu-item">
-												<a href="#">Products</a>
-												<ul class="sub-menu">
-													<li class="menu-item"><a href="https://kalyanishrestha.com.np/comingsoon.html">Digital Anatomy Atlas</a></li>
-													<li class="menu-item"><a href="https://kalyanishrestha.com.np/comingsoon.html">disease and disorder</a></li>
-													<li class="menu-item"><a href="https://kalyanishrestha.com.np/comingsoon.html">Physiology & Pathology</a></li>
-													<li class="menu-item"><a href="https://kalyanishrestha.com.np/comingsoon.html">Muscle & Kinesiology</a></li>
-													<li class="menu-item"><a href="https://kalyanishrestha.com.np/comingsoon.html">Medical App</a></li>
-													<li class="menu-item"><a href="https://kalyanishrestha.com.np/comingsoon.html">visible body atlas & suite</a></li>
-													<li class="menu-item"><a href="https://kalyanishrestha.com.np/pics.html" target="_blank">Clips and pics</a></li>
-												</ul>
-											</li>
+
 											<li class="menu-item">
 												<a href="#">Body systems</a>
 												<ul class="sub-menu">
@@ -569,10 +558,7 @@
 									<a target="_blank" href="https://www.facebook.com/humansanimatedanatomy"><i class="fa fa-facebook"></i></a>
 								</li>
 								<li>
-									<a target="_blank" href="https://twitter.com/hanotomy"><i class="fa fa-twitter"></i></a>
-								</li>
-								<li>
-									<a target="_blank" href="https://www.instagram.com/hanotomy"><i class="fa fa-instagram"></i></a>
+									<a target="_blank" href="https://www.instagram.com/hanotoomy"><i class="fa fa-instagram"></i></a>
 								</li>
 								<li>
 									<a target="_blank" href="https://t.me/hanotomy"><i class="fa fa-telegram"></i></a>
@@ -640,7 +626,7 @@
 		<script>
 			setTimeout(() => {
 					   document.querySelector(".window-container").style.display = "none";
-				}, 20000);
+				}, 8000);
 		</script>
 	</body>
 </html>
